Initial finish the json of docs and openapi.yaml
